# pocketllm-lite

./: .flutter-plugins  .gitignore  Agents.MD  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  SECURITY.md  analysis_options.yaml  app-ads.txt  build_release.bat  build_release.sh  flutter_native_splash.yaml  full_test_log.txt  index.html  pubspec.yaml  test_output.txt  test_output_2.txt  test_output_full.txt  test_output_serial.txt  upload-keystore.jks
.Jules/: architect.md  bolt.md  palette.md  sentinel.md
.gemini/: m3_expressive_redesign.md
.github/: pull_request_template.md
.github/workflows/: release.yml
.jules/: architect.md  bolt.md  palette.md  sentinel.md
android/: key.properties.bak
android/app/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/pocketllm_lite/: MainActivity.kt
android/app/src/main/kotlin/com/pocketllm/pocketllm_lite/: MainActivity.kt
android/app/src/main/res/xml/: filepaths.xml  network_security_config.xml
docs/: PocketLLM_Codex_Prompt.md  posts.md
ios/: pocketllm_lite.podspec
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: hive_registrar.g.dart  main.dart  router.dart
lib/core/: providers.dart  router.dart
lib/l10n/: app_en.arb  app_es.arb  app_hi.arb  app_ja.arb  app_ko.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_es.dart  app_localizations_hi.dart  app_localizations_ja.dart  app_localizations_ko.dart  app_localizations_zh.dart  app_zh.arb
lib/models/: app_settings.dart  chat_message.dart  chat_message.g.dart  chat_session.dart  chat_session.g.dart  local_model.dart  ollama_model.dart
lib/providers/: chat_provider.dart  chat_provider.g.dart  model_manager_provider.dart  ollama_provider.dart  ollama_provider.g.dart  settings_provider.dart  settings_provider.g.dart
lib/repositories/: chat_repository.dart
linux/: CMakeLists.txt
pocketllm-website/: privacy.html  styles.css  terms.html
test/: markdown_image_security_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+234 files in other folders)
